--- a/src/components/portfolio/Roles.css
+++ b/src/components/portfolio/Roles.css
@@ -1,3 +1,6 @@
+:root{
+  --content-background-color:#252734;
+}
 .role-container {
   padding-left: 3rem;
   padding-top: 5rem;
@@ -11,13 +14,11 @@
   top: -100px;
   transition: 0.5s;
   opacity: 0;
+  
 }
-.role-container-x {
-  display: none;
-}
+
 .role-container-secondary {
-  width: 886px;
-  display: none;
+  width: 880px;
   justify-content: "space-around";
   margin-left: auto;
   margin-right: auto;
@@ -76,7 +77,7 @@ path {
     margin: 0 7px;
     height: 230px;
     width: 250px;
-  }
+  } 
   .role-content {
     top: 10%;
   }
